fix spacing

--- a/less/modules/_media.less
+++ b/less/modules/_media.less
@@ -16,7 +16,7 @@
 .media-obj-left {
 
   @media (min-width: @media-small) {
-    margin: 0 1rem 1rem 0;
+    margin: 0 1rem 0;
     float: left;
   }
 
@@ -25,7 +25,7 @@
 .media-obj-right {
 
   @media (min-width: @media-small) {
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 0 1rem;
     float: right;
   }
 
